cmake_minimum_required(VERSION 3.5.1)

set(COMPONENT_NAME component2)

find_package(Boost COMPONENTS system thread)

add_library(${COMPONENT_NAME} SHARED
  src/component2.cpp
)
add_library(${PROJECT_NAME}::${COMPONENT_NAME} ALIAS ${COMPONENT_NAME})
set_target_properties(${COMPONENT_NAME}
	PROPERTIES
	VERSION ${SHARED_LIBRARY_VERSION} SOVERSION ${SHARED_LIBRARY_VERSION}
	OUTPUT_NAME ${PROJECT_NAME}-${COMPONENT_NAME}
	DEFINE_SYMBOL ${COMPONENT_NAME}_EXPORTS
)
target_link_libraries(${COMPONENT_NAME}
  ${Boost_LIBRARIES}
	${PROJECT_NAME}::component1
)

target_include_directories(${COMPONENT_NAME}
	PUBLIC
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
		$<INSTALL_INTERFACE:include>
	PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src
)

PROJECT_INSTALL_COMPONENT(${COMPONENT_NAME})
PROJECT_GENERATE_PACKAGE(${COMPONENT_NAME})

